--- a/tex/latex/misc/leptc.sty
+++ b/tex/latex/misc/leptc.sty
@@ -4,7 +4,7 @@
 % author = LePtC
 % version = 2014.08（已停止更新，改用 XeLaTeX）
 % email = alileptc@gmail.com
-% available on GitHub: 
+% available on GitHub: https://github.com/LePtC/LeNote
 %--------------------------------------------------
 % 用 texify 编译出 dvi 文件,再用 dvipdfmx 编译出 pdf 文件：
 % texify --batch --quiet --tex-option=-synctex=1 $(NAME_PART).tex
