--- a/tex/latex/misc/leptc.sty
+++ b/tex/latex/misc/leptc.sty
@@ -1,88 +1,25 @@
 %--------------------------------------------------
-% LePtC 双语彩色笔记模版
+% LePtC 双语彩色笔记模版 - 符号部分
 % filename  = leptc.sty
 % author = LePtC
-% version = 2014.08（已停止更新，改用 XeLaTeX）
+% version = 2014.12
 % email = alileptc@gmail.com
 % available on GitHub: https://github.com/LePtC/LeNote
-%--------------------------------------------------
-% 用 texify 编译出 dvi 文件,再用 dvipdfmx 编译出 pdf 文件：
-% texify --batch --quiet --tex-option=-synctex=1 $(NAME_PART).tex
-% dvipdfmx $(NAME_PART).dvi
-%--------------------------------------------------
-% 本模版用于 latex+CJK 方案 http://www.math.zju.edu.cn/ligangliu/LaTeXForum/tex_cjk.htm
-% 文档前加入\usepackage{leptc} 以及 \begin{CJK*}{UTF8}{fs}\rmfamily ... \end{CJK*}
 %--------------------------------------------------
 
 \NeedsTeXFormat{LaTeX2e}[1994/12/01]
 \ProvidesPackage{leptc}
 
-% \RequirePackage{cleveref}
-
-
-%--------------------------------------------------
-% 页面设置
-\RequirePackage[a4paper, top=10pt, bottom=15pt, left=20pt, right=20pt]{geometry}
-%--------------------------------------------------
-
-
-% \RequirePackage{ctexcap} % 不要首行缩进
-\setlength{\parindent}{0pt} % 不要首行缩进
-\linespread{1.1} % 行间距放大，否则对于表格太紧了
-
-% 公式设置 ---------------
-
-\setlength{\thickmuskip}{1 mu} % 等号两边空太大
-\setlength{\medmuskip}{1 mu} 
-\setlength{\thinmuskip}{2 mu} % 会缩小 \, 的距离
-
-% 中括号大括号有特殊含义，公式中多层括号尽量都用圆括号
-\delimitershortfall-1sp % 嵌套括号尺寸总是递增
-
-% 环境设置 ---------------
-
-\RequirePackage{enumitem} % 罗列功能，好像没啥用？
-\setlist[enumerate]{itemsep=0pt}
-
-\RequirePackage{tabularx}
-\RequirePackage{multirow}
-\setlength{\extrarowheight}{1pt} % 表格上下还是太紧
-\renewcommand{\arraystretch}{1.2} % 后面矩阵会单独处理
-\setlength{\tabcolsep}{2pt} % 表格列间距又太多...
-
-\RequirePackage{subcaption}
-\RequirePackage[font=large,skip=0pt,labelsep=none]{caption}
-% \setlength{\abovecaptionskip}{0pt} % 图表都另外做标题
-% \setlength{\belowcaptionskip}{0pt}
-% \setlength{\intextsep}{2pt}
-
-
-
-%--------------------------------------------------
-% 字体设置
-\RequirePackage{CJK} % 请直接安装 CTeX 完整版，省事
-% \RequirePackage{ccmap}
-%--------------------------------------------------
-
-
-% 这样 \ruby 就自动是 verdana 体了
-\RequirePackage{verdana} 
-\RequirePackage{times}
-
-% \RequirePackage{mathptmx} % 这个不好看！
-\RequirePackage{amsfonts}
-\RequirePackage{amsmath}
-\RequirePackage{amssymb}
 
 
 
 %--------------------------------------------------
 % 定义颜色
-\RequirePackage[dvipdfmx]{color} 
-% 不加这个选项 dvipdfmx 会出不来 png 图 T_T
+\RequirePackage{color}
 %--------------------------------------------------
 
 
+% 2014.11 更新: 红色弃用, 链接全部紫色, 公式高亮全部橙色, 证明绿色
 \definecolor{r}{RGB}{208,18,27} % InDesign 红色
 \definecolor{g}{RGB}{42,167,56} % InDesign 绿色
 \definecolor{b}{RGB}{12,51,136} % InDesign 蓝色
@@ -90,7 +27,7 @@
 \definecolor{o}{RGB}{255,128,0} % 高亮橙
 \definecolor{p}{RGB}{128,0,128} % 清华紫
 
-\definecolor{y}{RGB}{150,150,150} % 灰，仿铅笔
+\definecolor{y}{RGB}{140,140,140} % 灰，仿铅笔
 \definecolor{w}{RGB}{255,255,255} % 白，用于反色
 
 
@@ -112,12 +49,8 @@
 \renewcommand{\ln}{{\color{o}\,\oldln\,}}
 
 % 自然对数正体，元电荷量斜体
-\newcommand{\e}{{\color{o}\mathrm{e}}} 
-\renewcommand{\exp}[1][]{
-	{\color{o}\mathrm{exp}}
-	\ifthenelse{\equal{#1}{}}{}{
-	\ensuremath{\left( #1 \right)}
-}}
+\newcommand{\e}{{\color{o}\,\mathbf{e}}} 
+\renewcommand{\exp}{{\color{o}\mathrm{exp}}}
 
 \LetLtxMacro{\oldsin}{\sin}
 \renewcommand{\sin}{{\color{o}\,\oldsin\,}}
@@ -128,6 +61,15 @@
 \LetLtxMacro{\oldcot}{\cot}
 \renewcommand{\cot}{{\color{o}\,\oldcot\,}}
 
+\LetLtxMacro{\oldsinh}{\sinh}
+\renewcommand{\sinh}{{\color{o}\,\oldsinh\,}}
+\LetLtxMacro{\oldcosh}{\cosh}
+\renewcommand{\cosh}{{\color{o}\,\oldcosh\,}}
+\LetLtxMacro{\oldtanh}{\tanh}
+\renewcommand{\tanh}{{\color{o}\,\oldtanh\,}}
+\LetLtxMacro{\oldcoth}{\coth}
+\renewcommand{\coth}{{\color{o}\,\oldcoth\,}}
+
 \LetLtxMacro{\oldarcsin}{\arcsin}
 \renewcommand{\arcsin}{{\color{o}\,\oldarcsin\,}}
 \LetLtxMacro{\oldarccos}{\arccos}
@@ -137,14 +79,20 @@
 
 \newcommand{\sinc}{{\color{o}\,\mathrm{sinc}\,}}
 
-\renewcommand{\H}{{\color{o}\,\mathrm{H}\,}} % 厄米函数
-\renewcommand{\L}{{\color{o}\,\mathrm{L}\,}} % 拉盖尔函数
+% 函数名只有一个字母时,不用正体区分?
+\newcommand{\He}{{\color{o}\,\mathrm{H}\,}} % 厄米函数
+\renewcommand{\La}{{\color{o}\,\mathrm{L}\,}} % 拉盖尔函数
 
-\renewcommand{\Re}[1]{{{\color{o}\text{Re}}\left[#1\right]}}
+\renewcommand{\Re}{{\color{o}\text{Re}}}
+\renewcommand{\Im}{{\color{o}\text{Im}}}
 
 % 粗体被注册为群，双线被注册为数域，花体泛函
 % 字母形的算符高亮绿色
-\newcommand{\Fo}[1]{{\ensuremath{{\color{g}\mathcal{F}}\left[#1\right]}}}
+\newcommand{\Fo}[1]{{\ensuremath{{\color{o}\mathcal{F}}\left[#1\right]}}}
+
+\newcommand{\tr}{\,{\color{o}\mathrm{tr}}\,}
+\newcommand{\diag}[1][]{\,{\color{o}\mathrm{diag}}
+	\ifthenelse{\equal{#1}{}}{}{\mat{#1}}\,}
 
 % \lim \sum \max \min 之类不作处理
 % 图画符号（\prime，根号）即使是算符不上色,因为有麻烦 ...
@@ -154,38 +102,59 @@
 
 %--------------------------------------------------
 % commath 包的进一步扩展，包括导数、偏导数
-% \RequirePackage{commath} 这个包实现的不好
+% \RequirePackage{commath} 这个包实现的不好 →_→
 %--------------------------------------------------
 
 
 % 单个字母 ---------------
 
-% 微分算符正体，带指数的用法 \d[2]
-\renewcommand{\d}[1][]{{\color{g}\,\ensuremath{\mathrm{d^{#1}}}}} 
-% TODO: \ensuremath{\,\mathrm{d}#1\@ifnextchar\d{\,}{}}
+% 微分算符正体，带指数的用法 \dif[2] TODO: 不要这样用了…
+\newcommand{\dif}[1][]{{\color{o}\,\ensuremath{\mathrm{d}}}^{#1}} 
+% TODO: \ensuremath{\,\mathrm{d}#1\@ifnextchar\dif{\,}{}}
 
 % 协变导数
-\newcommand{\D}{{\color{g}\mathrm{D}}} 
+\newcommand{\Dif}{{\color{o}\mathrm{D}}} 
 
 % 偏导数
 \LetLtxMacro{\oldpartial}{\partial}
-\renewcommand{\partial}[1][]{{\color{g}\,\ensuremath{\oldpartial^{#1}}}}
+\renewcommand{\partial}[1][]{{\color{o}\,\ensuremath{\oldpartial^{#1}}}}
 
 % 矢量微分算符，可作梯度、散度、旋度、拉普拉斯算符
 \LetLtxMacro{\oldnabla}{\nabla}
-\renewcommand{\nabla}{{\color{g}\oldnabla}}
-\newcommand{\nablad}{{\color{g}\oldnabla\cdot}}
-\newcommand{\nablat}{{\color{g}\oldnabla\times}}
-\newcommand{\nablas}{{\color{g}\oldnabla^2}}
+\renewcommand{\nabla}{{\color{o}\mathbf{\oldnabla}}}
+\newcommand{\nablad}{{\color{o}\mathbf{\oldnabla\cdot}}}
+\newcommand{\nablat}{{\color{o}\mathbf{\oldnabla\times}}}
+\newcommand{\nablas}{{\color{o}\mathbf{\oldnabla^2}}}
 
 \LetLtxMacro{\olddelta}{\delta}
-\renewcommand{\delta}{{\color{g}\olddelta}}
+\renewcommand{\delta}{{\color{o}\olddelta}}
+% 克罗内克函数
+\newcommand{\delfun}{{\color{o}\olddelta}}
+\newcommand{\epsfun}{{\color{o}\varepsilon}}
+% 拉普拉斯算符正体，表示相差用斜体（算了还是用▽²表示拉普拉斯算符吧）
 \LetLtxMacro{\oldDelta}{\Delta}
-\renewcommand{\Delta}{{\color{g}\oldDelta}}
+\renewcommand{\Delta}{{\color{o}\oldDelta}}
+% \renewcommand{\Delta}{{\color{o}\varDelta}}
+
+% 其它默认斜体
+\LetLtxMacro{\oldGamma}{\Gamma}
+\renewcommand{\Gamma}{\varGamma}
+\LetLtxMacro{\oldLambda}{\Lambda}
+\renewcommand{\Lambda}{\varLambda}
+\LetLtxMacro{\oldPhi}{\Phi}
+\renewcommand{\Phi}{\varPhi}
+\LetLtxMacro{\oldPsi}{\Psi}
+\renewcommand{\Psi}{\varPsi}
+\LetLtxMacro{\oldPi}{\Pi}
+\renewcommand{\Pi}{\varPi}
+
+% 大小O记号
+\newcommand{\bigO}{{\color{o}\mathrm{O}}}
+\newcommand{\smallo}{{\color{o}\mathrm{o}}}
 
 % 常微分分式 ---------------
 
-\newcommand{\od}[3][]{\frac{\d[#1] #2}{\d #3^{#1}}}
+\newcommand{\od}[3][]{\frac{\dif[#1] #2}{\dif #3^{#1}}}
 % \left. \right| 不好看
 % \mathchoice: display, text, script and scriptscript
 \newcommand{\odat}[4][]{ \mathchoice
@@ -199,12 +168,12 @@
 
 \newcommand{\pd}[3][]{\frac{\partial[#1] #2}{\partial #3^{#1}}}
 \newcommand{\pdat}[4][]{ \mathchoice
-	{\left(\pd[#1]{#2}{#3}\right)_{#4}}
-	{(\pd[#1]{#2}{#3})_{#4}}
+	{\Big(\pd[#1]{#2}{#3}\Big)_{#4}}
+	{\big(\pd[#1]{#2}{#3}\big)_{#4}}
 	{(\pd[#1]{#2}{#3})_{#4}}
 	{(\pd[#1]{#2}{#3})_{#4}}
 }
-\newcommand{\md}[6]{\frac{\partial{^{#2}}#1}{\partial{#3^{#4}}\partial{#5^{#6}}}}
+\newcommand{\md}[6]{\frac{\partial[#2] #1}{\partial{#3^{#4}}\partial{#5^{#6}}}}
 \newcommand{\mdat}[7]{ \mathchoice
 	{\left(\dmd{#1}{#2}{#3}{#4}{#5}{#6}\right)_{#7}}
 	{(\tmd{#1}{#2}{#3}{#4}{#5}{#6})_{#7}}
@@ -216,28 +185,31 @@
 
 %--------------------------------------------------
 % esvect 包的进一步扩展，包括矢量、矢量导数、双矢量
-\RequirePackage[b]{esvect}
+\RequirePackage[b]{esvect} %（esvect 能不能出鱼叉选项啊 ...）
+% \RequirePackage{harpoon}
 %--------------------------------------------------
 
 
 % 手写风格的矢量记号  ---------------
-% 暂放弃（esvect 能不能出鱼叉选项啊 ...）
 
-% \RequirePackage{accents} % 和 hyperref 冲突？
-% \renewcommand{\vec}[1]{\accentset{{\rightharpoonup}}{#1}}
-% \RequirePackage{harpoon} % 较长的矢量
-% \newcommand{\ovec}[1]{\text{\overrightharp{\ensuremath{#1}}}}
+% \RequirePackage{accents} % 和 hyperref 冲突！
+\newcommand{\tightoverset}[2]{
+	\mathop{#2}\limits^{\vbox to -.5ex{\kern-0.8ex\hbox{$#1$}\vss}}}
 
 % 矢量与导数  ---------------
 
 \renewcommand{\vec}[1]{\vv{#1}}
-\newcommand{\vecd}[1]{\dot{\vv{#1}}}
-\newcommand{\vecdd}[1]{\ddot{\vv{#1}}}
+% \renewcommand{\vec}[1]{\overrightharp{#1}}
+\newcommand{\vecd}[1]{\dot{\vec{#1}}}
+\newcommand{\vecdd}[1]{\ddot{\vec{#1}}}
 
 % 方便单位矢量
 \newcommand{\ve}[1]{\,\vec{e_{#1}}} 
 \newcommand{\ved}[1]{\,\vecd{e_{#1}}} 
 \newcommand{\vedd}[1]{\,\vecdd{e_{#1}}} 
+
+% 左矢量
+\newcommand{\lvec}[1]{\overset{\rotatebox[origin=c]{180}{$\fldr$}}{#1}}
 
 % 发明一种新的记号区分对t求导和对s求导（待议） ---------------
 
@@ -247,59 +219,82 @@
 
 % 双矢量  ---------------
 
-\newcommand{\dvec}[1]{\overset{-\joinrel\fldr\joinrel\fldr}{#1}}
-% \newcommand{\dvec}[1]{\accentset{\fldr\joinrel\fldr}{#1}}
+\newcommand{\vvec}[1]{\overset{ }{\tightoverset{\fldr\joinrel\fldr}{#1}}}
+\newcommand{\vvecd}[1]{\dot{\vvec{#1}}}
+\newcommand{\vvecdd}[1]{\ddot{\vvec{#1}}}
+
+% 三阶张量  ---------------
+
+\newcommand{\vvvec}[1]{\overset{ }{\tightoverset{\fldr\joinrel\fldr\joinrel\fldr}{#1}}}
+\newcommand{\vvvecd}[1]{\dot{\vvvec{#1}}}
+\newcommand{\vvvecdd}[1]{\ddot{\vvvec{#1}}}
 
 
 
 %--------------------------------------------------
 % 方便矩阵，包括方括号矩阵、行列式
-
+% 圆括号p，方括号b，花括号B，单竖v，双竖V
 %--------------------------------------------------
 
+
+% 常用：单列表
+
+\newcommand{\tab}[1]{\begin{tabular}{l}%
+	#1%
+	\end{tabular}%
+}
 
 % 默认矩阵还是方括号好看 ---------------
 
 % 自定义缩放 \mat[.7]{x\\y\\z}
-\newcommand{\mat}[2][1.0]{
-	\scalebox{#1}{
-		\renewcommand{\arraystretch}{.8}
-		\hspace{-10pt}
-		$\begin{bmatrix}#2\end{bmatrix}$
-		\hspace{-8pt}
-	}
-} 
+\newcommand{\mat}[2][1.0]{\scalebox{#1}{
+	\renewcommand{\arraystretch}{.8}
+	\hspace{-10pt}
+	\ensuremath{\begin{bmatrix}#2\end{bmatrix}}
+	\hspace{-8pt}
+}} 
 
-% 行列式包直线 ---------------
+% 行列式 ---------------
 
-\newcommand{\dmat}[2][1.0]{
-	\scalebox{#1}{
-		\renewcommand{\arraystretch}{.8}
-		\hspace{-10pt}
-		$ \left| \begin{matrix}#2\end{matrix} \right| $
-		\hspace{-8pt}
-	}
-}
+\newcommand{\matd}[2][1.0]{\scalebox{#1}{
+	\renewcommand{\arraystretch}{.8}
+	\hspace{-10pt}
+	\ensuremath{\begin{vmatrix}#2\end{vmatrix}}
+	\hspace{-8pt}
+}}
 
 % nothing ---------------
 
-\newcommand{\nmat}[2][1.0]{
-	\scalebox{#1}{
-		\renewcommand{\arraystretch}{.8}
-		\hspace{-10pt}
-		$\begin{matrix}#2\end{matrix}$
-		\hspace{-8pt}
-	}
+\newcommand{\matn}[2][1.0]{\scalebox{#1}{
+	\renewcommand{\arraystretch}{.8}
+	\hspace{-10pt}
+	\ensuremath{\begin{matrix}#2\end{matrix}}
+	\hspace{-8pt}
+}}
+
+\newcommand{\mats}[2][1.0]{\scalebox{#1}{
+	\renewcommand{\arraystretch}{.8}
+	\hspace{-10pt}
+	\ensuremath{\begin{smallmatrix}#2\end{smallmatrix}}
+	\hspace{-8pt}
+}}
+
+% 左花括号
+\newcommand{\leftB}[2][1]{
+	\ifthenelse{\equal{#1}{1}}{\{}{}
+	\ifthenelse{\equal{#1}{2}}{\Bigl\{}{}
+	\ifthenelse{\equal{#1}{3}}{\Biggl\{}{}
+	\ifthenelse{\equal{#1}{4}}{\left\{}{}
+	\,#2
+	\ifthenelse{\equal{#1}{4}}{\right.}{}
 }
+% http://tex.stackexchange.com/questions/45001/how-do-i-left-align-entries-in-a-matrix-with-beginmatrix
 
 
 
 %--------------------------------------------------
 % 方便贴图，包括并排插图、右侧贴图
-\usepackage[dvipdfmx]{graphicx}
-% latex 编译最好是 eps 图片，pdflatex 编译最好是 pdf
-% \RequirePackage{epstopdf} 
-\RequirePackage{bmpsize} % 帮 latex 自动确定图片尺寸，pdf 或 xetex 不需要
+\RequirePackage{graphicx}
 \RequirePackage{float}
 \RequirePackage{stfloats}
 %--------------------------------------------------
@@ -350,71 +345,68 @@
 
 \def\imagetop#1{\vtop{\null\hbox{#1}}}
 \newcommand{\figr}[3]{
-	{\setlength{\tabcolsep}{0pt}
-	\begin{tabular}{p{{\textwidth-#2\textwidth}}p{#2\textwidth}}
+	{\setlength{\tabcolsep}{2pt}
+	\begin{tabular}{@{}p{{\textwidth-#2\textwidth}}p{#2\textwidth}@{}}
 	\vspace{-14 pt}
 		{#3}
 		&{\raisebox{-\totalheight+\baselineskip}{\includegraphics[width=#2\textwidth]{#1}}}
-	\end{tabular}
-	}
+	\end{tabular}}
 }
 
 
 
 %--------------------------------------------------
-% LePtC 彩色条目
-\RequirePackage{titlesec}
+% 方便贴源代码
+\RequirePackage{listings}  
 %--------------------------------------------------
 
 
-% 章标题 ---------------
+% \newcommand{\code}[1]{{\fontspec{Consolas}%
+% \begin{lstlisting}[language={[LaTeX]TeX}] %
+	% #1%
+% \end{lstlisting}%
+% }}
 
-\titleformat{\section}{\color{r}\centering}{}{1em}{} 
-\newcommand{\chap}[2]{\vspace{10pt} \begin{CJK}{UTF8}{hei} \section{\eng{\line(1,0){100} \qquad #1 \qquad \line(1,0){100} }{#2}} \end{CJK}}
-% \newcommand{\chap}[2]{\newline  #1 #2 \newline}
+% \newcommand{\codev}[1]{{\colorbox{y}{\color{white}\verb|#1|}}}
+\newcommand{\code}[1]{\colorbox{y}{\lstinline[basicstyle=\ttfamily\color{w}]|#1|}}
+
+\newcommand{\file}[1]{{\fcolorbox{y}{w}{\ttfamily{#1}}}}
+
+
+
+%--------------------------------------------------
+% LePtC 彩色条目
+% \RequirePackage{titlesec}
+%--------------------------------------------------
+
 
 % 其它环境 ---------------
- 
+
 % 灰色代表注释笔记
-\newcommand{\com}[1]{{\color{y}\ ( #1 )}} 
-% 中括号代表证明
-\newcommand{\prv}[1]{{\color{y}{[#1]}}} 
-% \newcommand{\prv}[1]{{\color{y}{\ensuremath{\left[\text{#1}\right]}}}}
+\newcommand{\com}[1]{{\color{y}(#1)}}
+\newcommand{\coms}[1]{{\color{y}%
+	$\left(\tab{#1}\right)$%
+}} 
+
+% 方括号代表证明
+% \newcommand{\prv}[1]{{\color{g}{「#1」}}} 
+\newcommand{\prv}[1]{
+\ifmmode{{\color{g}{#1}}}
+\else{\!{\color{g}{「#1」}}\!\!}
+\fi} 
+% \left[ \right]? \left| \right|? \lceil \rfloor? 还是啥都不用省心...
+% \newcommand{\prvs}[1]{{\color{g}%
+	% $\left|\tab{#1}\right|$%
+% }} 
+\newcommand{\prveq}[1]{
+{\color{g}{ $\lceil\left. #1 \right.\rfloor$}}}
+\newcommand{\prveqd}[1]{{\color{g}{ \eqd{\Big\lceil\left. #1 \right.\Big\rfloor}}}}
+\newcommand{\prveqa}[1]{{\color{g}{\eqa{#1}}}}
+
 % 红色尖括号代表链接
-\newcommand{\link}[1]{{\color{r}{$\langle$#1$\rangle$}}} 
-
-
-
-%--------------------------------------------------
-% LePtC 双语词条
-\RequirePackage{ruby}
-%--------------------------------------------------
-
-
-\renewcommand{\rubysize}{0.7}
-\renewcommand{\rubysep}{-0.1ex} 
-% 英文为 Verdana 体
-\newcommand{\eng}[2]{\large\ruby{#1}{\textnormal{#2}}} 
-% 英文注在右侧
-\newcommand{\engs}[2]{#1\ \textnormal{\small #2}} 
-
-\setlength\fboxsep{1pt} % 设框的偏移 
-% \setlength\fboxrule{2pt} % 设框宽 \fcolorbox{b}{b}{text}
-
-\newcommand{\entc}[2][]{{\color{b}\large\textnormal{
-	\begin{CJK}{UTF8}{hei}
-	\ruby{{\colorbox{b}{{\color{w}#2}}}}{#1}
-	\end{CJK}
-}}}
-
-% \ruby 默认居中对齐，没有左对齐的选项，用 box 重新计算左对齐的宽度...
-\RequirePackage{calc} 
-\newcommand{\ent}[2][]{\large\textnormal{
-	\begin{CJK}{UTF8}{hei}
-	\ruby{{\hspace{-3pt}\colorbox{b}{{\color{w}#2}}\hspace{-3pt}}}{ % 可选 \framebox{#1} % \hspace{-3pt} ?
-	{\hspace{3pt}\color{b}\makebox[\widthof{#2}+\widthof{#2}/2][l]{#1}}
-	}\end{CJK}
-}}
+% \newcommand{\link}[2][]{{\color{p}{$\langle$#1$-$\nameref{#2}$\rangle$}}} 
+% 未整合前先用这个
+\newcommand{\link}[2][]{{\color{p}{$\langle$#1$-$#2$\rangle$}}} 
 
 
 
@@ -423,30 +415,45 @@
 % （物理单位、函数正体，变量、粒子符号斜体）
 %--------------------------------------------------
 
-
 % 方便括号配对，整篇文档不需要出现 $
-\newcommand{\eq}[1]{\,$ #1 $}
-\newcommand{\eqd}[1]{\,$\displaystyle #1 $}
+\newcommand{\eq}[1]{\!$#1$} % 和中文混排需保证每个 \eq 前有个空格...
+\newcommand{\eqd}[1]{$\displaystyle #1$}
+\newcommand{\eqa}[1]{$\begin{aligned}#1\end{aligned}$}
+% \newcommand{\eqa}[1]{$\begin{align*}#1\end{align*}$}
+
+\newcommand{\eqn}[1]{\begin{equation}#1\end{equation}}
+\newcommand{\eqna}[1]{\eqn{\begin{aligned}#1\end{aligned}}}
 
 % 物理单位高亮紫色 ---------------
 
 % 虚数单位正体
 % \RequirePackage{bbm} % Mathematica 狂人可设 e i 双线体 \mathbbm{i}
-\renewcommand{\i}{{\color{p}\mathrm{i}}} 
+\newcommand{\ii}{{\color{b}\mathbf{i}}} 
 
 % \RequirePackage{siunitx} % 物理单位紫色，用法\SI{134.976}{MeV} 
 % 改用下面这种方案了
-\newcommand{\uni}[1]{{\ensuremath{\color{p}\ \mathrm{#1}}}} 
+\newcommand{\uni}[1]{{\ensuremath{\color{b}\ \mathrm{#1}}}} 
 
 \renewcommand{\le}{\leqslant}
 \renewcommand{\ge}{\geqslant}
 
+% 字母大型运算符加粗
+\LetLtxMacro{\oldmax}{\max}
+\renewcommand{\max}{\mathop{\boldsymbol\oldmax}}
+\LetLtxMacro{\oldmin}{\min}
+\renewcommand{\min}{\mathop{\boldsymbol\oldmin}}
+
 % spacing ---------------
 
-\LetLtxMacro{\oldrightarrow}{\rightarrow}
-\renewcommand{\rightarrow}{\ \oldrightarrow\ }
-\LetLtxMacro{\oldLeftrightarrow}{\Leftrightarrow}
-\renewcommand{\Leftrightarrow}{\ \oldLeftrightarrow\ }
+% TODO: 改不了字体?
+\renewcommand{\to}{{\ensuremath{\ \mathbf{\rightarrow}\ }}}
+
+\newcommand{\onto}[2][]{{\,\ensuremath{\xrightarrow[#1]{#2}}\,}}
+
+% 充要 necessary and sufficient
+\newcommand{\ns}{{\ensuremath{
+\,\mathbf{\Leftrightarrow}\,}}}
+% TODO: 怎么只改箭头类字符的字体?
 
 
 
@@ -455,20 +462,28 @@
 \RequirePackage{braket} % 提供量子力学常用
 \RequirePackage{wasysym} % 提供 \apprge \apprle
 \RequirePackage{esint} % 提供 \varoiint，要 overide 掉 amsmath
+\RequirePackage{extarrows} % 等号上面写东西 \xlongequal[below]{above}
 %--------------------------------------------------
 
 
-\newcommand{\LePtC}{L\hspace{-3pt}\raisebox{3pt}{e}P\hspace{-1pt}\raisebox{-2pt}{\scalebox{0.7}{t}}C}
+% 不用下面这种了
+% \newcommand{\onequal}[1]{\overset{\text{#1}}{=\joinrel=}}
+% \onright 有 \xrightarrow 了
+
+\newcommand{\LePtC}{L\hspace{-2pt}\raisebox{4pt}{e}\hspace{1pt}P\raisebox{-1pt}{\scalebox{0.8}{t}}\hspace{1pt}C}
 
 % text 中打 $\sim$
 \newcommand{\tld}{{\raise.17ex\hbox{$\scriptstyle\mathtt{\sim}$}}}
 
 % 区分一撇 comma 和求导 slash，会覆盖掉 accent commands
-\renewcommand{\co}{{^{\raisebox{3pt}{,}}}}
+\newcommand{\co}[1][]{\ensuremath{\mathchoice
+	{^{\raisebox{3pt}{$,$}}}
+	{^{\raisebox{3pt}{$,$}}}
+	{^{\scalebox{0.8}{\raisebox{3pt}{$,$}}}}
+	{^{\scalebox{0.8}{\raisebox{3pt}{$,$}}}}
+	\ifthenelse{\equal{#1}{}}{}{\kern-0.8ex_{#1}}
+}}
 % \renewcommand{\b}{^{\backprime}}
-
-% 等号上面写东西
-\newcommand{\onequal}[1]{\overset{\text{#1}}{=\joinrel=}}
 
 %\RequirePackage{mhchem} % 化学公式
 \newcommand{\ce}[1]{$\mathrm{#1}$}
@@ -477,34 +492,62 @@
 
 \newcommand{\E}[1]{\times10^{#1}} % 方便数量级
 
-% \newcommand{\const}{{\text{常数}}} % 中文不好使？...
-\newcommand{\con}{Const.}
-\newcommand{\cc}{c.c.} % 复共轭
+\newcommand{\con}{{\text{常数}}} % 中文不好使？...
+% \newcommand{\con}{Const.}
+\newcommand{\cc}{\text{c.c.}} % 复共轭
 % \newcommand{\~}{$\sim$} % text 模式用
 
-% 理论力学，内力外力 ---------------
+% 垂直 \perp 平行 \parallel 但这个平行是竖线，我想要斜的
+\newcommand{\para}{{/\mkern-5mu/}}
 
+% 理论力学， ---------------
+
+% 动能
+\newcommand{\Ek}[1][]{E_{\mathrm{k}#1}}
+% 内力外力
 \newcommand{\inter}{^{(\mathrm{i})}}
 \newcommand{\exter}{^{(\mathrm{e})}}
+% 有效势
+\newcommand{\Veff}{V_\text{eff}}
 
 % 热学 ---------------
 
-\newcommand{\kb}{k_\mathrm{B}}
+\newcommand{\kB}{k_\mathrm{B}}
 \newcommand{\NA}{N_\mathrm{A}}
+% \newcommand{\Tc}{T_\mathrm{c}} % 单个字母下标不能算文字,不然所有下标都是根据英文来的 ( 如 center of mass )
+% 两种求平均不一样!
+\newcommand{\tave}[1]{\overline{#1}}
+\newcommand{\pave}[1]{\braket{#1}}
+
+% 电磁学 ---------------
+
+\newcommand{\emf}{\mathscr{E}} % electromotive force 
+\newcommand{\muB}{\mu_\mathrm{B}} % 玻尔磁子
 
 % 角度，温度 ---------------
 
 \renewcommand{\deg}{^\circ} % text 模式用 \textsuperscript{}
 
-\newcommand{\oC}{{\ensuremath{\color{p}\,^{\circ}{\rm C}}}}
-\newcommand{\oF}{{\ensuremath{\color{p}\,^{\circ}{\rm F}}}}
+\newcommand{\oC}{{\ensuremath{\color{b}\,^{\circ}{\mathrm C}}}}
+\newcommand{\oF}{{\ensuremath{\color{b}\,^{\circ}{\mathrm F}}}}
 
 % 光学 ---------------
-% \renewcommand{\o}{\mathrm{o}} % 非寻常光？...
+% \newcommand{\no}{n_\mathrm{o}} % 非寻常光？...
+
+% 相对论 ---------------
+
+\newcommand{\Mp}{M_\mathrm{P}} % 普朗克单位制
+\newcommand{\lp}{l_\mathrm{P}} 
+\newcommand{\tp}{t_\mathrm{P}} 
+
+% 量子力学 ---------------
+
+\newcommand{\hatv}[1]{\ensuremath{\hat{\vec{#1}}}}
+\newcommand{\hatvs}[1]{\ensuremath{\hat{\vec{#1}}\raisebox{3pt}{$^2$}}}
 
 % bar ---------------
 
-\def\dbar{{{\color{g}\mathchar'26\mkern-12mu \mathrm{d}}}}
+\def\dbar{{{\color{o}\mkern5mu \mathchar'26\mkern-12mu \mathrm{d}}}}
 
 \makeatletter
 \newcommand{\lambdabar}{{\mathchoice
@@ -518,19 +561,35 @@
 }
 \makeatother
 
+% 子项
+\newcommand{\sub}{\ \raisebox{4pt}{$\llcorner$}\ }
 
 
+%--------------------------------------------------
+% 其它常用包
+
+%--------------------------------------------------
 
 
+% TEMPLATE ---------------
 
-% TODO：其它常用包
-\RequirePackage{soul} % 高亮工具 \hl{...}
-\RequirePackage{natbib} % 参考文献包
+\RequirePackage[xetex,colorlinks,unicode,pdfencoding=auto]{hyperref} 
+% 超链接包，unicode 和 \chap 有冲突？
+% \hypersetup{linkcolor=\color{o}, citecolor = \color{o}}
+
+% \RequirePackage[sort&compress]{natbib} % 参考文献包
+% \setlength{\bibsep}{0pt}
+% \RequirePackage{hypernat}
+
 \RequirePackage{datetime} % 当前时间
-\settimeformat{hhmmsstime}
 
-% \usepackage[dvipdfmx,colorlinks,unicode,pdfencoding=auto]{hyperref} 
-% 超链接包，和 \chap 有冲突？
+\RequirePackage{ulem} % 删除线 \sout{...}
+\RequirePackage{soul} % 高亮工具 \hl{...} \st{...}
+
+% http://tex.stackexchange.com/questions/48706/feynmf-doesnt-produce-feynman-diagram-at-all-in-txc
+% \RequirePackage{feynmp} % 用法：记得给整个文档包上
+% \begin{fmffile}{feynman}
+% \end{fmffile}
 
 
 
